--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/bg-image.jpg");
+  background-image: url("http://s2.fotokto.ru/photo/full/633/6333545.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
