--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,12 +1,18 @@
 {% extends "main/base.html" %}
-{% load static %} 
+
+{% load static %}
+
 
 {% block css %}
 	<link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}" />
 {% endblock css %} 
 
 {% block content %}
-	<h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1>
+    <div class="mt-5 pt-5 bg-white rounded" >
+	<h2 class="m-2">{{ content }}</h2>
+    <p class="m-2"> {{ text_on_page }}</p>
+    
+    </div>
 {% endblock content %}
 
  {% block footer %}
