--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -59,7 +59,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="users/login.html">Войти</a>
+                <a class="nav-link text-white" href="{% url 'problems:index'%}">Преблемы</a>
               </li>
               <li class="nav-item dropdown">
                 <a
