--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,7 +8,7 @@
 {% endblock css %}
 
 {% block content %}
-<div class="mt-5 pt-5 bg-white rounded">
+<div class="mt-5 pt-5 rounded bg-white bg-opacity-50">
 	<h2 class="m-2">{{ content }}</h2>
 	<p class="m-2"> {{ text_on_page }}</p>
 
