--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -9,84 +9,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="{% static 'deps/css/my_css.css'%}" />
-  <!-- Стиль footer-a для главной страницы -->
-  {% block css %} {% endblock css %}
-  <!-- Favicons for different platforms -->
+  {% block css %}{% endblock css %}
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'deps/favicon/apple-touch-icon.png' %}" />
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'deps/favicon/favicon-32x32.png' %}" />
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'deps/favicon/favicon-16x16.png' %}" />
   <link rel="manifest" href="{% static 'deps/favicon/site.webmanifest' %}" />
   <title>{{ title }}</title>
+  <style>
+    /* Делаем footer фиксированным при недостатке контента */
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    section {
+      flex: 1;
+    }
+  </style>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'main:index' %}">Home</a>
+        <a class="navbar-brand" href="{% url 'main:index' %}">Городской портал</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
+            <li class="nav-item">
               <a class="nav-link text-white" href="{% url 'main:about' %}">О нас</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'problems:index'%}">Преблемы</a>
+              <a class="nav-link text-white" href="{% url 'problems:index'%}">Проблемы</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Мой профиль
+                Профиль
               </a>
               <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item text-white" href="carts/cart.html">Корзина</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-white" href="users/profile.html">Личный кабинет</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-white" href="{% url 'admin:index' %}">Админ панель</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item text-white" href="#">Выйти</a>
-                </li>
+                {% if user.is_authenticated %}
+                <li><a class="dropdown-item" href="{% url 'accounts:profile' %}">Личный кабинет</a></li>
+                <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Выйти</a></li>
+                {% else %}
+                <li><a class="dropdown-item" href="{% url 'accounts:login' %}">Войти</a></li>
+                <li><a class="dropdown-item" href="{% url 'accounts:register' %}">Зарегистрироваться</a></li>
+                {% endif %}
               </ul>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success text-white" type="submit">
-              Поиск
-            </button>
-          </form>
         </div>
       </div>
     </nav>
   </header>
   <section>
     <div class="container">
-      <div class="row mt-1">
-        <div class="col-lg-2">
-          <!-- Пустой блок на Ваше усмотрение -->
-        </div>
-        <div class="col-lg-10">
-          <!-- Контент на странице -->
-          {% block content %} {% endblock content %}
-        </div>
-      </div>
+      {% block content %}{% endblock content %}
     </div>
   </section>
-  {% block footer %} {% endblock footer %}
-  <script src="{% static 'deps/js/jquery/jquery-3.7.0.min.js' %}"></script>
-  <script src="{% static 'deps/js/jquery-events.js' %}"></script>
-  <script src="{% static 'deps/js/jquery-ajax.js' %}"></script>
+  <footer class="py-4 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Городской портал 2023</p>
+    </div>
+  </footer>
   <script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
 </body>
 
