--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,8 @@
 {% endblock css %}
 
 {% block content %}
-<h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1>
+<h2 class="mt-5 text-white w-100">{{ content }}</h2>
+<h3 class="text-white w-75">{{ un_content }}</h3>
 {% endblock content %}
 
 {% block footer %}
