--- a/problems/templates/problems/problems.html
+++ b/problems/templates/problems/problems.html
@@ -3,96 +3,61 @@
 
 
 {% block content %}
-<div class="row">
-    <!-- Форма фильтров -->
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center my-3">
+        <h2>Список проблем</h2>
+        {% if user.is_authenticated %}
+            <a href="{% url 'problems:create_problem' %}" class="btn btn-primary">Создать заявку</a>
+        {% else %}
+            <a href="{% url 'accounts:login' %}" class="btn btn-secondary">Войдите, чтобы создать заявку</a>
+        {% endif %}
+    </div>
+    
+    <!-- Фильтры -->
     <div class="dropdown mb-2">
         <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Фильтры
         </button>
-
-        {% for category in categories  %}
-        
-            <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
-                <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on">
-                    <input type="hidden" name="q" value="request.GET.q">
-                    <label class="form-check-label" for="flexCheckDefault">{{category.name}}</label>
-            </div>
-        {% endfor %}
-            <p class="text-white mx-3 mt-3">Сортировать:</p>
+        <form method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+            {% for category in categories %}
             <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default"
-                    checked>
-                <label class="form-check-label" for="flexRadioDefault1">
-                    По умолчанию
-                </label>
+                <input class="form-check-input" type="checkbox" name="category" id="category{{ category.id }}" value="{{ category.id }}"
+                    {% if category.id|stringformat:"s" in request.GET.category %}checked{% endif %}>
+                <label class="form-check-label" for="category{{ category.id }}">{{ category.name }}</label>
             </div>
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    От дешевых к дорогим
-                </label>
-            </div>
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3" value="-price">
-                <label class="form-check-label" for="flexRadioDefault3">
-                    От дорогих к дешевым
-                </label>
-            </div>
+            {% endfor %}
             <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
         </form>
     </div>
-
-
-    {% for problem in problems %}
-    <div class="col-lg-4 col-md-6 p-4">
-        <div class="card border-primary rounded">
-            <img src="{% static problem.image %}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <a href="../goods/product.html">
-                    <p class="card-title">{{ problem.name }}</p>
-                </a>
-                <p class="card-text text-truncate">{{ problem.description }}</p>
-                <p class="product_id">id: 02265</p>
-                <div class="d-flex justify-content-between">
-                    {% comment %} <p><s>100</s> $</p>
-                    <p><strong>90.00 $</strong></p>
-                    <span class="badge bg-warning text-dark">Скидка 10.00 %</span> {% endcomment %}
-                    <p><strong>{{ problem.price }} $</strong></p>
-                    <a href="#" class="btn add-to-cart">
-                        <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon" width="32" height="32">
-                    </a>
+    
+    <!-- Список проблем -->
+    <div class="row">
+        {% for problem in problems %}
+        <div class="col-lg-4 col-md-6 p-4">
+            <div class="card border-primary rounded">
+                <img src="{{ problem.image.url }}" class="card-img-top" alt="{{ problem.name }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ problem.name }}</h5>
+                    <p class="card-text text-truncate">{{ problem.description }}</p>
+                    <p><strong>Категория:</strong> {{ problem.category.name }}</p>
+                    <p><strong>Статус:</strong> {{ problem.get_status_display }}</p>
+                    <a href="{% url 'problem_detail' problem.slug %}" class="btn btn-outline-primary">Подробнее</a>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-    <!-- Карта товара -->
-
 </div>
-<!-- Пагинация -->
-<nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center my-4">
-        <div class="custom-shadow d-flex">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </div>
-    </ul>
-</nav>
 {% endblock content %}
+
 
 {% block footer %}
 <footer class="py-4 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>
-    </div>
+	<div class="container">
+		<p class="m-0 text-center text-white">
+			Copyright &copy; Мега крутой сайт городского портала
+		</p>
+	</div>
 </footer>
 {% endblock footer %}
