--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,12 +1,12 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<div class="container my-5">
-    <h2>Личный кабинет</h2>
-    <p><strong>Пользователь:</strong> {{ user.username }}</p>
-    <p><strong>Email:</strong> {{ user.email }}</p>
+<div class="container mt-5">
+    <h2 class="text-center text-white mb-4">Личный кабинет</h2>
+    <p class="text-white"><strong>Имя пользователя:</strong> {{ user.username }}</p>
+    <p class="text-white"><strong>Email:</strong> {{ user.email }}</p>
     <hr>
-    <h3>Мои заявки</h3>
+    <h3 class="text-white">Мои заявки</h3>
     {% if problems %}
     <ul class="list-group">
         {% for problem in problems %}
@@ -18,7 +18,7 @@
         {% endfor %}
     </ul>
     {% else %}
-    <p>Вы еще не добавляли заявки.</p>
+    <p class="text-white">Вы еще не добавляли заявки.</p>
     {% endif %}
 </div>
 {% endblock %}
