--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -9,8 +9,8 @@
 
 {% block content %}
 <div class="mt-5 pt-5 rounded bg-white bg-opacity-50">
-	<h2 class="m-2">{{ content }}</h2>
-	<p class="m-2"> {{ text_on_page }}</p>
+	<h2 class="m-2 text-black">{{ content }}</h2>
+	<p class="m-2 text-black"> {{ text_on_page }}</p>
 
 </div>
 {% endblock content %}
