--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,9 +8,9 @@
 {% endblock css %}
 
 {% block content %}
-<div class="mt-5 pt-5 rounded bg-white bg-opacity-50">
-	<h2 class="m-2 text-black">{{ content }}</h2>
-	<p class="m-2 text-black"> {{ text_on_page }}</p>
+<div class="mt-5 pt-5 rounded">
+	<h2 class="m-2 ">{{ content }}</h2>
+	<p class="m-2 "> {{ text_on_page }}</p>
 
 </div>
 {% endblock content %}
@@ -18,7 +18,7 @@
 {% block footer %}
 <footer class="py-4 bg-dark">
 	<div class="container">
-		<p class="m-0 text-center text-white">
+		<p class="m-0 text-center ">
 			Copyright &copy; Мега крутой сайт городского портала
 		</p>
 	</div>
