--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,14 +6,14 @@
 {% endblock css %}
 
 {% block content %}
-<h2 class="mt-5 text-white w-100">{{ content }}</h2>
-<h3 class="text-white w-75">{{ un_content }}</h3>
+<h2 class="mt-5  w-100">{{ content }}</h2>
+<h3 class=" w-75">{{ un_content }}</h3>
 {% endblock content %}
 
 {% block footer %}
 <footer class="py-4 bg-dark">
 	<div class="container">
-		<p class="m-0 text-center text-white">
+		<p class="m-0 text-center ">
 			Copyright &copy; Мега крутой сайт городского портала
 		</p>
 	</div>
