--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -3,15 +3,17 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="text-center text-white mb-4">Регистрация</h2>
+    <h2 class="text-center  mb-4">Регистрация</h2>
     <form method="post" class="needs-validation" novalidate>
         {% csrf_token %}
         <div class="row">
             <div class="col-md-6 mx-auto bg-dark p-4 rounded shadow-lg">
                 <!-- Поле Username -->
                 <div class="mb-3">
-                    <label for="id_username" class="form-label text-white">Имя пользователя</label>
-                    <input type="text" name="username" id="id_username" class="form-control {% if form.username.errors %}is-invalid{% endif %}" value="{{ form.username.value|default_if_none:'' }}">
+                    <label for="id_username" class="form-label ">Имя пользователя</label>
+                    <input type="text" name="username" id="id_username"
+                        class="form-control {% if form.username.errors %}is-invalid{% endif %}"
+                        value="{{ form.username.value|default_if_none:'' }}">
                     {% if form.username.errors %}
                     <div class="invalid-feedback">
                         {{ form.username.errors|striptags }}
@@ -21,8 +23,10 @@
 
                 <!-- Поле Email -->
                 <div class="mb-3">
-                    <label for="id_email" class="form-label text-white">Email</label>
-                    <input type="email" name="email" id="id_email" class="form-control {% if form.email.errors %}is-invalid{% endif %}" value="{{ form.email.value|default_if_none:'' }}">
+                    <label for="id_email" class="form-label ">Email</label>
+                    <input type="email" name="email" id="id_email"
+                        class="form-control {% if form.email.errors %}is-invalid{% endif %}"
+                        value="{{ form.email.value|default_if_none:'' }}">
                     {% if form.email.errors %}
                     <div class="invalid-feedback">
                         {{ form.email.errors|striptags }}
@@ -32,8 +36,9 @@
 
                 <!-- Поле Пароль -->
                 <div class="mb-3">
-                    <label for="id_password1" class="form-label text-white">Пароль</label>
-                    <input type="password" name="password1" id="id_password1" class="form-control {% if form.password1.errors %}is-invalid{% endif %}">
+                    <label for="id_password1" class="form-label ">Пароль</label>
+                    <input type="password" name="password1" id="id_password1"
+                        class="form-control {% if form.password1.errors %}is-invalid{% endif %}">
                     {% if form.password1.errors %}
                     <div class="invalid-feedback">
                         {{ form.password1.errors|striptags }}
@@ -43,8 +48,9 @@
 
                 <!-- Поле Подтверждение пароля -->
                 <div class="mb-3">
-                    <label for="id_password2" class="form-label text-white">Подтвердите пароль</label>
-                    <input type="password" name="password2" id="id_password2" class="form-control {% if form.password2.errors %}is-invalid{% endif %}">
+                    <label for="id_password2" class="form-label ">Подтвердите пароль</label>
+                    <input type="password" name="password2" id="id_password2"
+                        class="form-control {% if form.password2.errors %}is-invalid{% endif %}">
                     {% if form.password2.errors %}
                     <div class="invalid-feedback">
                         {{ form.password2.errors|striptags }}
@@ -54,7 +60,8 @@
 
                 <!-- Кнопка -->
                 <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
-                <p class="mt-3 text-white text-center">Уже есть аккаунт? <a href="{% url 'accounts:login' %}" class="text-decoration-none text-info">Войти</a></p>
+                <p class="mt-3  text-center">Уже есть аккаунт? <a href="{% url 'accounts:login' %}"
+                        class="text-decoration-none text-info">Войти</a></p>
             </div>
         </div>
     </form>
