--- a/problems/templates/problems/about_problems.html
+++ b/problems/templates/problems/about_problems.html
@@ -3,20 +3,20 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="text-white">{{ problem.name }}</h2>
-    <p class="text-white"><strong>Описание:</strong> {{ problem.description }}</p>
-    <p class="text-white"><strong>Адрес:</strong> {{ problem.address }}</p>
-    <p class="text-white"><strong>Категория:</strong> {{ problem.category.name }}</p>
-    <p class="text-white"><strong>Статус:</strong> {{ problem.get_status_display }}</p>
+    <h2>{{ problem.name }}</h2>
+    <p><strong>Описание:</strong> {{ problem.description }}</p>
+    <p><strong>Адрес:</strong> {{ problem.address }}</p>
+    <p><strong>Категория:</strong> {{ problem.category.name }}</p>
+    <p><strong>Статус:</strong> {{ problem.get_status_display }}</p>
     {% if problem.image %}
     <div class="mt-3">
-        <h4 class="text-white">Изображение проблемы:</h4>
+        <h4>Изображение проблемы:</h4>
         <img src="data:image/jpeg;base64,{{ problem.image|base64_encode }}" class="img-fluid" alt="Проблема">
     </div>
     {% endif %}
     {% if problem.image_resolved %}
     <div class="mt-3">
-        <h4 class="text-white">Изображение после решения:</h4>
+        <h4>Изображение после решения:</h4>
         <img src="data:image/jpeg;base64,{{ problem.image_resolved|base64_encode }}" class="img-fluid" alt="Решено">
     </div>
     {% endif %}
