--- a/templates/index.html
+++ b/templates/index.html
@@ -30,42 +30,42 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Информация
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Про нас</a></li>
+                                <li><a class="dropdown-item  " href="#">Доставка и оплата</a></li>
+                                <li><a class="dropdown-item  " href="#">Контактная информация</a></li>
+                                <li><a class="dropdown-item  " href="#">Про нас</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="carts/cart.html">Корзина</a>
+                            <a class="nav-link  " href="carts/cart.html">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="users/login.html">Войти</a>
+                            <a class="nav-link  " href="users/login.html">Войти</a>
                         </li>
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Мой профиль
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="users/profile.html">Личный кабинет</a>
+                                <li><a class="dropdown-item  " href="carts/cart.html">Корзина</a></li>
+                                <li><a class="dropdown-item  " href="users/profile.html">Личный кабинет</a>
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Админ панель</a></li>
+                                <li><a class="dropdown-item  " href="#">Админ панель</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Выйти</a></li>
+                                <li><a class="dropdown-item  " href="#">Выйти</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
+                        <button class="btn btn-outline-success " type="submit">Поиск</button>
                     </form>
                 </div>
             </div>
@@ -80,25 +80,23 @@
                     <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Каталог
-                        <img class="mx-1" src="deps/icons/grid-fill.svg" alt="Catalog Icon" width="16"
-                            height="16">
+                        <img class="mx-1" src="deps/icons/grid-fill.svg" alt="Catalog Icon" width="16" height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Все товары</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Кухня</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Спальня</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Гостинная</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Офис</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Фурнитура</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Декор</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Все товары</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Кухня</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Спальня</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Гостинная</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Офис</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Фурнитура</a></li>
+                        <li><a class="dropdown-item " href="goods/catalog.html">Декор</a></li>
                     </ul>
                 </div>
                 <!-- Значек корзины, вызывает модальное окно -->
                 <div>
                     <button type="button" class="btn btn-dark btn-secondary d-flex" id="modalButton"
                         aria-expanded="false">
-                        <img class="mx-1" src="deps/icons/basket2-fill.svg" alt="Catalog Icon" width="24"
-                            height="24">
+                        <img class="mx-1" src="deps/icons/basket2-fill.svg" alt="Catalog Icon" width="24" height="24">
                         <span id="goods-in-cart-count">0</span>
                     </button>
                 </div>
@@ -125,13 +123,15 @@
                                                     <div class="col p-0">
                                                         <div class="input-group">
                                                             <span class="input-group-btn">
-                                                                <button type="button" class="btn btn-dark btn-sm decrement"
+                                                                <button type="button"
+                                                                    class="btn btn-dark btn-sm decrement"
                                                                     data-cart-id="" data-cart-change-url="">-</button>
                                                             </span>
                                                             <input type="text" class="form-control number" value="1"
                                                                 readonly>
                                                             <span class="input-group-btn">
-                                                                <button type="button" class="btn btn-dark btn-sm increment"
+                                                                <button type="button"
+                                                                    class="btn btn-dark btn-sm increment"
                                                                     data-cart-id="" data-cart-change-url="">+</button>
                                                             </span>
                                                         </div>
@@ -183,7 +183,7 @@
     </section>
     <footer class="py-4 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>
+            <p class="m-0 text-center ">Copyright &copy; Home Python Hub Studio 2023</p>
         </div>
     </footer>
     <script src="deps/js/jquery/jquery-3.7.0.min.js"></script>
