--- a/templates/orders/create_order.html
+++ b/templates/orders/create_order.html
@@ -27,42 +27,42 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Информация
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Про нас</a></li>
+                                <li><a class="dropdown-item  " href="#">Доставка и оплата</a></li>
+                                <li><a class="dropdown-item  " href="#">Контактная информация</a></li>
+                                <li><a class="dropdown-item  " href="#">Про нас</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="../carts/cart.html">Корзина</a>
+                            <a class="nav-link  " href="../carts/cart.html">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="../users/login.html">Войти</a>
+                            <a class="nav-link  " href="../users/login.html">Войти</a>
                         </li>
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Мой профиль
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="../carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="../users/profile.html">Личный кабинет</a>
+                                <li><a class="dropdown-item  " href="../carts/cart.html">Корзина</a></li>
+                                <li><a class="dropdown-item  " href="../users/profile.html">Личный кабинет</a>
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Админ панель</a></li>
+                                <li><a class="dropdown-item  " href="#">Админ панель</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Выйти</a></li>
+                                <li><a class="dropdown-item  " href="#">Выйти</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
+                        <button class="btn btn-outline-success " type="submit">Поиск</button>
                     </form>
                 </div>
             </div>
@@ -77,17 +77,16 @@
                     <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Каталог
-                        <img class="mx-1" src="../deps/icons/grid-fill.svg" alt="Catalog Icon" width="16"
-                            height="16">
+                        <img class="mx-1" src="../deps/icons/grid-fill.svg" alt="Catalog Icon" width="16" height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Все товары</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Кухня</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Спальня</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Гостинная</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Офис</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Фурнитура</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Декор</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Все товары</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Кухня</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Спальня</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Гостинная</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Офис</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Фурнитура</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Декор</a></li>
                     </ul>
                 </div>
             </div>
@@ -163,26 +162,28 @@
                                             </div>
                                             <div class="col-md-6 mb-3">
                                                 <label for="id_last_name" class="form-label">Фамилия*:</label>
-                                                <input type="text" class="form-control" id="id_last_name" name="last_name" required>
+                                                <input type="text" class="form-control" id="id_last_name"
+                                                    name="last_name" required>
                                             </div>
                                             <div class="col-md-6 mb-3">
                                                 <label for="id_phone_number" class="form-label">Номер телефона*:</label>
-                                                <input type="text" class="form-control" id="id_phone_number" name="phone_number"
-                                                    placeholder="В формате: XXX-XXX-XX-XX"
-                                                    required>
+                                                <input type="text" class="form-control" id="id_phone_number"
+                                                    name="phone_number" placeholder="В формате: XXX-XXX-XX-XX" required>
                                             </div>
                                             <div class="col-md-12 mb-3">
                                                 <label for="delivery" class="form-label">Способ доставки: </label>
                                                 <div class="form-check form-check-inline">
-                                                    <input class="form-check-input" type="radio" name="requires_delivery"
-                                                        id="id_requires_delivery" value="1" checked>
+                                                    <input class="form-check-input" type="radio"
+                                                        name="requires_delivery" id="id_requires_delivery" value="1"
+                                                        checked>
                                                     <label class="form-check-label" for="id_requires_delivery">Нужна
                                                         доставка</label>
                                                 </div>
                                                 <div class="form-check form-check-inline">
-                                                    <input class="form-check-input" type="radio" name="requires_delivery"
-                                                        id="id_requires_delivery" value="0">
-                                                    <label class="form-check-label" for="id_requires_delivery">Самовывоз</label>
+                                                    <input class="form-check-input" type="radio"
+                                                        name="requires_delivery" id="id_requires_delivery" value="0">
+                                                    <label class="form-check-label"
+                                                        for="id_requires_delivery">Самовывоз</label>
                                                 </div>
                                             </div>
                                             <div class="mb-3" id="deliveryAddressField">
@@ -202,7 +203,8 @@
                                                 <div class="form-check form-check-inline">
                                                     <input class="form-check-input" type="radio" name="payment_on_get"
                                                         id="id_payment_on_get" value="1">
-                                                    <label class="form-check-label" for="id_payment_on_get">Наличными/картой
+                                                    <label class="form-check-label"
+                                                        for="id_payment_on_get">Наличными/картой
                                                         при плучении</label>
                                                 </div>
                                             </div>
