--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -27,42 +27,42 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Информация
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Про нас</a></li>
+                                <li><a class="dropdown-item  " href="#">Доставка и оплата</a></li>
+                                <li><a class="dropdown-item  " href="#">Контактная информация</a></li>
+                                <li><a class="dropdown-item  " href="#">Про нас</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="../carts/cart.html">Корзина</a>
+                            <a class="nav-link  " href="../carts/cart.html">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="../users/login.html">Войти</a>
+                            <a class="nav-link  " href="../users/login.html">Войти</a>
                         </li>
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Мой профиль
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="../carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="../users/profile.html">Личный кабинет</a>
+                                <li><a class="dropdown-item  " href="../carts/cart.html">Корзина</a></li>
+                                <li><a class="dropdown-item  " href="../users/profile.html">Личный кабинет</a>
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Админ панель</a></li>
+                                <li><a class="dropdown-item  " href="#">Админ панель</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Выйти</a></li>
+                                <li><a class="dropdown-item  " href="#">Выйти</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
+                        <button class="btn btn-outline-success " type="submit">Поиск</button>
                     </form>
                 </div>
             </div>
@@ -77,17 +77,16 @@
                     <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Каталог
-                        <img class="mx-1" src="../deps/icons/grid-fill.svg" alt="Catalog Icon" width="16"
-                            height="16">
+                        <img class="mx-1" src="../deps/icons/grid-fill.svg" alt="Catalog Icon" width="16" height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Все товары</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Кухня</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Спальня</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Гостинная</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Офис</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Фурнитура</a></li>
-                        <li><a class="dropdown-item text-white" href="../goods/catalog.html">Декор</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Все товары</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Кухня</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Спальня</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Гостинная</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Офис</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Фурнитура</a></li>
+                        <li><a class="dropdown-item " href="../goods/catalog.html">Декор</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,9 +109,8 @@
                                         <form>
                                             <div class="row">
                                                 <div class="col-md-12 mb-3 text-center">
-                                                    <img src="../deps/images/baseavatar.jpg"
-                                                        alt="Аватар пользователя" class="img-fluid rounded-circle"
-                                                        style="max-width: 150px;">
+                                                    <img src="../deps/images/baseavatar.jpg" alt="Аватар пользователя"
+                                                        class="img-fluid rounded-circle" style="max-width: 150px;">
                                                     <input type="file" class="form-control mt-3" id="avatar"
                                                         accept="image/*">
                                                 </div>
@@ -158,14 +156,18 @@
                                                             <div class="col p-0">
                                                                 <div class="input-group">
                                                                     <span class="input-group-btn">
-                                                                        <button type="button" class="btn btn-dark btn-sm decrement"
-                                                                            data-cart-id="" data-cart-change-url="">-</button>
+                                                                        <button type="button"
+                                                                            class="btn btn-dark btn-sm decrement"
+                                                                            data-cart-id=""
+                                                                            data-cart-change-url="">-</button>
                                                                     </span>
-                                                                    <input type="text" class="form-control number" value="1"
-                                                                        readonly>
+                                                                    <input type="text" class="form-control number"
+                                                                        value="1" readonly>
                                                                     <span class="input-group-btn">
-                                                                        <button type="button" class="btn btn-dark btn-sm increment"
-                                                                            data-cart-id="" data-cart-change-url="">+</button>
+                                                                        <button type="button"
+                                                                            class="btn btn-dark btn-sm increment"
+                                                                            data-cart-id=""
+                                                                            data-cart-change-url="">+</button>
                                                                     </span>
                                                                 </div>
                                                             </div>
@@ -175,7 +177,8 @@
                                                             <div class="col p-0"><strong>100.00 $</strong></div>
                                                             <div class="col p-0">
                                                                 <a href="#" class="remove-from-cart" data-cart-id="">
-                                                                    <img class="mx-1" src="../deps/icons/trash3-fill.svg"
+                                                                    <img class="mx-1"
+                                                                        src="../deps/icons/trash3-fill.svg"
                                                                         alt="Catalog Icon" width="16" height="16">
                                                                 </a>
                                                             </div>
@@ -205,11 +208,15 @@
                                             <div class="accordion" id="accordionExample">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header" id="heading1">
-                                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                                            Заказ № 256 - 09 сентября 2023 9:04 | Статус:<strong class="mx-2"> В обработке</strong>
+                                                        <button class="accordion-button" type="button"
+                                                            data-bs-toggle="collapse" data-bs-target="#collapse1"
+                                                            aria-expanded="false" aria-controls="collapse1">
+                                                            Заказ № 256 - 09 сентября 2023 9:04 | Статус:<strong
+                                                                class="mx-2"> В обработке</strong>
                                                         </button>
                                                     </h2>
-                                                    <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+                                                    <div id="collapse1" class="accordion-collapse collapse show"
+                                                        aria-labelledby="heading1" data-bs-parent="#accordionExample">
                                                         <div class="accordion-body">
                                                             <table class="table table-dark table-hover">
                                                                 <thead>
@@ -222,11 +229,12 @@
                                                                 </thead>
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td><a class="text-white" href="#">Комплект стол и три стула</a></td>
+                                                                        <td><a href="#">Комплект стол и три стула</a>
+                                                                        </td>
                                                                         <td>1</td>
                                                                         <td>255.00 $</td>
                                                                         <td>255.00 $</td>
-                                                                        
+
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
@@ -240,11 +248,15 @@
                                                 </div>
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header" id="heading2">
-                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                                            Заказ № 248 - 01 августа 2023 11:28 | Статус: <strong>Получен</strong>
+                                                        <button class="accordion-button collapsed" type="button"
+                                                            data-bs-toggle="collapse" data-bs-target="#collapse2"
+                                                            aria-expanded="false" aria-controls="collapse2">
+                                                            Заказ № 248 - 01 августа 2023 11:28 | Статус:
+                                                            <strong>Получен</strong>
                                                         </button>
                                                     </h2>
-                                                    <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
+                                                    <div id="collapse2" class="accordion-collapse collapse"
+                                                        aria-labelledby="heading2" data-bs-parent="#accordionExample">
                                                         <div class="accordion-body">
                                                             <table class="table table-dark table-hover">
                                                                 <thead>
@@ -257,11 +269,11 @@
                                                                 </thead>
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td><a class="text-white" href="#">Стул офисный</a></td>
+                                                                        <td><a href="#">Стул офисный</a></td>
                                                                         <td>2</td>
                                                                         <td>30.00 $</td>
                                                                         <td>60.00 $</td>
-                                                                        
+
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
